--- a/frontend/src/components/Templates/PageList/styles.module.css
+++ b/frontend/src/components/Templates/PageList/styles.module.css
@@ -1,6 +1,7 @@
 .pageLayout {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+	height: 100%;
+	padding: 2rem;
 }
