--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,13 @@ html {
 	transition: background-color 0.2s ease, color 0.2s ease;
 }
 
-.end-message {
+.message {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	height: 100%;
+	justify-content: center;
 	text-align: center;
 	width: 100%;
 }
